# SRSLCompiler

./: Benchmark.cpp  CMakeLists.txt  README.md  Test-fs.srsl  Test-vs.srsl  TestMain.cpp  main.cpp
Benchmark/: FlowControlTest-fs.srsl  FractalPyramid-fs.srsl  PulsatingWaves-fs.srsl  PulsatingWaves-vs.srsl  SyntaxFAIL-fs.srsl  SyntaxFAIL-vs.srsl  VariableTest-fs.srsl  VariableTest-vs.srsl
SRSLShaders/: ArrayAccessComparisonTest-vs.srsl  CBLargeSlot-vs.srsl  CBSlotAlreadyTaken-vs.srsl  ComparisonTest-vs.srsl  ComparisonTestFail-vs.srsl  ConstantBufferTest-vs.srsl  Dev-fs.srsl  FlowControlTest-fs.srsl  FlowControlTest-vs.srsl  FunctionTest-fs.srsl  FunctionTest-vs.srsl  InterfaceTest-fs.srsl  InterfaceTest-vs.srsl  Testing-fs.srsl  Testing-vs.srsl  VariableTest-fs.srsl  VariableTest-vs.srsl  VectorComparisonTest-vs.srsl  VectorSwizzleTest-vs.srsl
Tests/: SymbolTableTest.cpp  SymbolTableTest.hpp  TestInclude.hpp
Tests/SymbolTable/: SymbolTableTest.cpp  SymbolTableTest.hpp
include/SrslCompiler/: PlatformDetection.hpp  ShaderModule.hpp  ShaderProgram.hpp  SrslCompiler.hpp  SrslCompilerInclude.hpp
src/: ParseExceptionHandler.cpp  ParseExceptionHandler.hpp  ProgramInfo.cpp  ProgramInfo.hpp  ShaderModule.cpp  ShaderModuleImpl.cpp  ShaderModuleImpl.hpp  ShaderProgram.cpp  ShaderProgramImpl.cpp  ShaderProgramImpl.hpp  SrslCompiler.cpp  SymbolTable.cpp  SymbolTable.hpp  TreeWalker.cpp  TreeWalker.hpp  Utils.hpp
src/AbstractSyntaxTree/: AbstractNode.cpp  AbstractNode.hpp  BaseNode.cpp  BaseNode.hpp  ConstantBufferNode.cpp  ConstantBufferNode.hpp  ExpressionNode.cpp  ExpressionNode.hpp  FLowControlNodes.cpp  FLowControlNodes.hpp  FunctionNode.cpp  FunctionNode.hpp  Interface.cpp  Interface.hpp  InterfaceNode.cpp  InterfaceNode.hpp  MemberAccessNode.cpp  MemberAccessNode.hpp  NodeTypes.hpp  Nodes.cpp  Nodes.hpp  ScopeNode.cpp  ScopeNode.hpp  ShaderStorageBufferNode.cpp  ShaderStorageBufferNode.hpp  ShaderTypeNode.cpp  ShaderTypeNode.hpp  StructDeclarationNode.cpp  StructDeclarationNode.hpp  SwizzleNode.cpp  SwizzleNode.hpp  TestAssertionNode.cpp  TestAssertionNode.hpp  TestCaseNode.cpp  TestCaseNode.hpp  TextureNode.cpp  TextureNode.hpp  VariableNode.cpp  VariableNode.hpp
src/AbstractSyntaxTree/Internal/: NodeTypeGenerator.cpp  NodeTypeGenerator.hpp  NodeTypes.cpp  NodeTypes.hpp  TestEvaluationNode.cpp  TestEvaluationNode.hpp
src/Converter/: VariableTypes.cpp  VariableTypes.hpp
src/Exporters/: Exporter.cpp  Exporter.hpp  GlslExporter.cpp  GlslExporter.hpp  HlslExporter.cpp  HlslExporter.hpp
src/Grammar/: SrslGrammar.g4  SrslGrammar.interp  SrslGrammar.tokens  SrslGrammarBaseListener.h  SrslGrammarLexer.cpp  SrslGrammarLexer.h  SrslGrammarLexer.interp  SrslGrammarLexer.tokens  SrslGrammarListener.h  SrslGrammarParser.cpp  SrslGrammarParser.h
src/Intrinsics/: FunctionIntrinsics.cpp  FunctionIntrinsics.hpp  Intrinsics.cpp  Intrinsics.hpp  VariableIntrinsics.cpp  VariableIntrinsics.hpp
src/SymbolTable/: Symbol.cpp  Symbol.hpp  SymbolException.cpp  SymbolException.hpp  SymbolTable.cpp  SymbolTable.hpp  SymbolType.cpp  SymbolType.hpp  TestCodeGenerator.cpp  TestCodeGenerator.hpp  Validator.cpp  Validator.hpp
src/Utils/: Exception.cpp  Exception.hpp  Macros.hpp  Memory.cpp  Memory.hpp  SmartPtr.hpp  Typedefs.hpp  Utils.cpp  Utils.hpp
src/antlr4/runtime/src/: SrslGrammar.g4  SrslGrammar.interp  SrslGrammar.tokens  SrslGrammarBaseListener.cpp  SrslGrammarBaseListener.h  SrslGrammarLexer.cpp  SrslGrammarLexer.h  SrslGrammarLexer.interp  SrslGrammarLexer.tokens  SrslGrammarListener.cpp  SrslGrammarListener.h  SrslGrammarParser.cpp  SrslGrammarParser.h
